# xenosphere-rs

./: .gitignore  Cargo.toml  README.md  concept-1.xesl  concept_transpiled_pytorch.py
app/: README.md  bun.lockb  package.json
app/src/: App.vue
app/src-tauri/: tauri.conf.json
app/src/components/node_graph/: main.vue
app/src/node_graph/nodes/layer/: base.ts  mod.ts  tfk__generated-lazy.ts  tfk__generated.ts  torch__generated-lazy.ts  torch__generated.ts
app/src/node_graph/nodes/model_util/: valuable.ts
tools/python_base_converter/: convert_tfk_layer.py  convert_torch_nlp_layer.py  convert_torch_nn_layer.py
