[workspace]
resolver = "2"
members = [
    "packages/xenosphere-macro",
    "packages/xenosphere-parser",
    "packages/xenosphere-core",
    "packages/xenosphere",
]


[workspace.dependencies]
# package dependencies
proc-macro2 = "1.0.79"
quote = "1.0.35"
rand = "0.8.5"
syn = { version = "2.0.58", features = ["extra-traits", "full"] }
