[workspace]
resolver = "2"
members = [
    "packages/xenosphere-macro",
    "packages/xenosphere-parser",
    "packages/xenosphere-core",
    "packages/xenosphere",
    "packages/xenosphere-cli",
    "packages/xenosphere-service",
    "packages/xenosphere-app",
    "app/src-tauri",
]
package.license-file = "LICENSE"
package.homepage = "https://github.com/Stvchm9703/xenosphere-rs"


[workspace.dependencies]
# package dependencies
proc-macro2 = "1.0.79"
quote = "1.0.35"
rand = "0.8.5"
syn = { version = "2.0.58", features = ["extra-traits", "full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_prost = "0.8"
